--- a/src/Curvas elípticas.ipynb
+++ b/src/Curvas elípticas.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -44,12 +44,12 @@
     "editable": true
    },
    "source": [
-    "Esta el la función para generación de la llave privada (número) y la pública (punto)"
+    "Esta el la función para generación de la clave privada (número) y la pública (punto)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -59,7 +59,7 @@
    "source": [
     "def obtenerClaves(G, n):\n",
     "    d = ZZ.random_element(1, n-1)\n",
-    "    H = d*G\n",
+    "    H = d * G\n",
     "    \n",
     "    return d,H #Privada / Pública "
    ]
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -86,11 +86,11 @@
     {
      "data": {
       "text/plain": [
-       "(4989624994646108927478767679354577321528002657589391412334041221744160794401,\n",
-       " (11640419254588643055510700971845636683830616632175781321906804827047413409632 : 49251420118687327900932745439496039565168931334141932692489192542000574639094 : 1))"
+       "(209422488036470359193428497821402459139312978951205284071843043251314056704,\n",
+       " (681631451179203202511925481720143792397189542401412953751034483718491216796 : 10224392266169055538052554596896121658120712081946523090645881441052298624315 : 1))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -168,12 +168,12 @@
     "editable": true
    },
    "source": [
-    "Pongamos ahora en práctica el métdodo implementado. Supongamos que Alice desea enviar un mensaje a Bob. Decide firmarlo y enviárselo. (La parte de encriptar el archivo no lo tenemos en cuenta, solo nos interesa la firma)"
+    "Pongamos ahora en práctica el métdodo implementado. Supongamos que Alice desea enviar un mensaje a Bob. Decide firmarlo y enviárselo. (La parte de encriptar el archivo no la tenemos en cuenta, solo nos interesa la firma)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -181,12 +181,12 @@
    },
    "outputs": [],
    "source": [
-    "mensaje = \"Bob, me comprado un gatito. Puedes venir a verlo esta tarde\""
+    "mensaje = \"Bob, me he comprado un gatito. Puedes venir a verlo esta tarde\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -222,13 +222,13 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mensajeDescifrado = \"Bob, me comprado un gatito. Puedes venir a verlo esta tarde\"\n",
+    "mensajeDescifrado = \"Bob, me he comprado un gatito. Puedes venir a verlo esta tarde\"\n",
     "verificarFirmaEC(mensajeDescifrado, G, n, HA, r, s)"
    ]
   },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -252,7 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "mensaje2 = \"Nos vemos en mi casa a las 14:00\"\n",
+    "mensaje2 = \"Nos vemos en mi casa a las 16:00\"\n",
     "r2, s2 = r, s = firmarEC(mensaje2, G, n, dA)"
    ]
   },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -281,7 +281,7 @@
        "False"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,22 +300,11 @@
    "source": [
     "Bob ve que el mensaje no lo ha enviado Alice por lo que no le da credibilidad al mismo"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 8.1",
+   "display_name": "SageMath 7.5.1",
    "language": "",
    "name": "sagemath"
   },
@@ -329,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
